--- a/references.bib
+++ b/references.bib
@@ -68,7 +68,7 @@
 
 @inproceedings{du95,
 	title={A note on quantized Weyl reciprocity at roots of unity},
-	author={Du, Jie},
+	author={Du, J.},
 	booktitle={Algebra Colloq},
 	volume={2},
 	number={4},
@@ -187,14 +187,14 @@
 
 @book{deng08,
 	title={Finite dimensional algebras and quantum groups},
-	author={Deng, B. and Du, J. and Parshall, B.},
+	author={Deng, B. and Du, J. and Parshall, B. and Wang, J.},
 	number={150},
 	year={2008},
 	publisher={American Mathematical Soc.}
 }
 
 @misc{dou10,
-	author={Dou, R and Jiang, Y. and Xiao, J.},
+	author={Dou, R. and Jiang, Y. and Xiao, J.},
 	title={Hall algebra approach to Drinfeld's presentation of quantum loop algebras},
 	year={2010},
 	eprint={arXiv:1002.1316}
@@ -256,6 +256,15 @@
 	publisher={Springer Science \& Business Media}
 }
 
+@article{du15,
+	title={Quantum affine gln via Hecke algebras},
+	author={Du, J. and Fu, Q.},
+	journal=	{Advances in Mathematics},
+	volume={282},
+	pages={23--46},
+	year={2015}
+}
+
 @article{su15,
 	title={Geometric realisation of 0-Schur and 0-Hecke algebras},
 	author={Jensen, B.T. and Su, X.},
@@ -282,6 +291,13 @@
 	year={2016}
 }
 
+@misc{du16,
+	title={Multiplication formulas and canonical bases for quantum affine gln},
+	author={Du, J. and Zhao, Z.},
+	year={2016},
+	eprint={arXiv:1608.01423v1}
+}
+
 @article{su20,
 	title={Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
 	author={Jensen, B.T. and Su, X. and Yang, G.},
@@ -290,4 +306,3 @@
 	pages={1177--1196},
 	year={2020}
 }
-
