--- a/preamble.sty
+++ b/preamble.sty
@@ -165,7 +165,7 @@
 % transpose involution on the generic algebra
 \newcommand{\antipode}[1]{S{(#1)}}
 % cyclic translation on generic algebra
-\newcommand{\rotation}[1]{\tau{#1}}
+\newcommand{\rotation}[1]{\tau{(#1)}}
 
 %localisation at elements of the form 1+qf
 \newcommand{\qfrac}{\mathcal{Q}}
