finished checking chapter 5. Next update the introduction.

--- a/preamble.sty
+++ b/preamble.sty
@@ -145,7 +145,7 @@
 % quiver for presentation of q schur algebras.
 \newcommand{\presentationquiver}[1][n,r]{\Gamma(#1)}
 % ideal of relations for presentation of q-Schur algebras.
-\newcommand{\qrelations}[1][n,r]{I(#1)}
+\newcommand{\qrelations}{I}
 % ideal of relations for presentation of generic algebra
 \newcommand{\zerorelations}{\mathcal{J}}
 
