Working on the introduction. Finally need to mention standard paths in the introduction.

--- a/references.bib
+++ b/references.bib
@@ -116,6 +116,26 @@
 	publisher={International Press of Boston}
 }
 
+@article{green99,
+	title={The affine q-Schur algebra},
+	author={Green, R. M.},
+	journal={Journal of Algebra},
+	volume={215},
+	number={2},
+	pages={379--411},
+	year={1999}
+}
+
+@article{varagnolo99,
+	title={On the decomposition matrices of the quantized Schur algebra},
+	author={Varagnolo, M. and Vasserot, E.},
+	journal={Duke mathematical journal},
+	volume={100},
+	number={2},
+	pages={267-297},
+	year={1999}
+}
+
 @article{reineke01,
 	title={Generic extensions and multiplicative bases of quantum groups at q = 0},
 	author={Reineke, M.},
@@ -125,7 +145,7 @@
 	year={2001}
 }
 
-@article{doty02,
+@article{02,
 	title={Presenting Schur algebras},
 	author={Doty, S. and Giaquinto, A.},
 	journal={International Mathematics Research Notices},
