almost there. need a fresh head to write the abstract and conclusion.

--- a/references.bib
+++ b/references.bib
@@ -145,7 +145,7 @@
 	year={2001}
 }
 
-@article{02,
+@article{doty02,
 	title={Presenting Schur algebras},
 	author={Doty, S. and Giaquinto, A.},
 	journal={International Mathematics Research Notices},
